# rocketlaunchtui

./: .gitignore  ChangeLog.md  README.md  rocketlaunchtui.cabal  test.db
data/: spacecrafts.json
src/: Main.hs  Main1.hs  ParseData.hs
